kubernetes/ingress/es_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: etna-ingress-es
  namespace: etna
  annotations:
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: kong
spec:
  rules:
    - host: afa13a7c0067b4f01991b0bad9e003a4-edf0e30af2b95f5f.elb.eu-west-2.amazonaws.com
      http:
        paths:
          - path: /es
            pathType: Prefix
            backend:
              service:
                name: ciim-internal-etna-es-http
                port:
                  number: 9200
          - path: /public
            pathType: Prefix
            backend:
              service:
                name: ciim-public-etna-es-http
                port:
                  number: 9200
          - path: /etna-public
            pathType: Prefix
            backend:
              service:
                name: ciim-public-es-http
                port:
                  number: 9200
