kubernetes/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: etna-ingress
  namespace: etna
  annotations:
    kubernetes.io/ingress.class: kong
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /api/v1/$1
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/data/(.*)
            pathType: Prefix
            backend:
              service:
                name: rosetta-service
                port:
                  name: rosetta-port
          - path: /tna/api/
            pathType: Prefix
            backend:
              service:
                name: ciim-service
                port:
                  name: api-port
          - path: /api/v1/
            pathType: Prefix
            backend:
              service:
                name: rosetta-service
                port:
                  name: rosetta-port
          - path: /swagger-ui/index.html
            pathType: Prefix
            backend:
              service:
                name: rosetta-service
                port:
                  name: rosetta-port
          - path: /swagger-ui/index.html/(.*)
            pathType: Prefix
            backend:
              service:
                name: rosetta-service
                port:
                  name: rosetta-port
          - path: /api/v1/spec
            pathType: Prefix
            backend:
              service:
                name: rosetta-service
                port:
                  name: rosetta-port
          - path: /ciim/
            pathType: Prefix
            backend:
              service:
                name: ui-service
                port:
                  name: ui-port
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rosetta-3-service
                port:
                  name: rosetta-port
