kubernetes/ingress/rosetta_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rosetta-3
  namespace: etna
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: request-transform-etna
spec:
  rules:
    - http:
        paths:
          - path: /rosetta-3
            pathType: Prefix
            backend:
              service:
                name: rosetta-3-service
                port:
                  name: rosetta-port
