kubernetes/ingress/rosetta_test_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rosetta-test-ingress
  namespace: etna
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
    - host: rosetta-test.k-int.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rosetta-3-test-service
                port:
                  name: rosetta-test-port
